# loom

./: .clang-tidy  .gitignore  .luarc.json  CONTRIBUTING.md  Cargo.toml  Doxyfile.in  LICENSE  README.md  flake.nix  justfile  meson.build  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
api/: loom.d.lua  loom_debug.d.lua  loom_debugger.d.lua  loom_log.d.lua
docs/: Doxyfile.in  book.toml  meson.build
docs/book/: SUMMARY.md  ecs.md  intro.md
examples/: meson.build  testbed.cpp
examples/testbed/: main.lua
include/loom/: ecs.hpp  loom.hpp
include/loom/utils/: load_modules.hpp  lua_module.hpp  sparse_set.hpp  utils.hpp
src/: loom.d.lua  main.cpp  main.odin  main.rs
src/core/: game_loop.rs
src/lexer/: lexer.odin  token.odin
src/modules/: loom_log.rs  mod.rs
src/modules/debugger/: debugger.cpp  debugger.lua  debugger_lua.h
src/modules/log/: log.cpp  log.d.lua
src/modules/loom_debug/: debugger.lua  mod.rs
src/modules/loom_debugger/: debugger.lua  mod.rs
src/parser/: parser.odin
subprojects/: imgui-docking.wrap  rll.wrap  sol2.wrap
subprojects/packagefiles/rll/: meson.build
tests/: complex_example.loom  lex.loom  meson.build  spec.loom  test_sparse_set.cpp  test_trivial.cpp
